--- a/components/lesson-submit.html
+++ b/components/lesson-submit.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
-        <title>R Table · ISLE Editor Documentation</title>
+        <title>Lesson Submit · ISLE Editor Documentation</title>
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="description" content="">
         <meta name="generator" content="GitBook 3.2.2">
@@ -57,10 +57,10 @@
     <link rel="shortcut icon" href="../gitbook/images/favicon.ico" type="image/x-icon">
 
     
-    <link rel="next" href="slider.html" />
+    <link rel="next" href="match-list-question.html" />
     
     
-    <link rel="prev" href="r-shell.html" />
+    <link rel="prev" href="grid.html" />
     
 
     </head>
@@ -362,7 +362,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.8" data-path="lesson-submit.html">
+        <li class="chapter active" data-level="1.4.8" data-path="lesson-submit.html">
             
                 <a href="lesson-submit.html">
             
@@ -498,7 +498,7 @@
             
         </li>
     
-        <li class="chapter active" data-level="1.4.15" data-path="r-table.html">
+        <li class="chapter " data-level="1.4.15" data-path="r-table.html">
             
                 <a href="r-table.html">
             
@@ -624,7 +624,7 @@
     <!-- Title -->
     <h1>
         <i class="fa fa-circle-o-notch fa-spin"></i>
-        <a href=".." >R Table</a>
+        <a href=".." >Lesson Submit</a>
     </h1>
 </div>
 
@@ -639,7 +639,7 @@
     
                                 <section class="normal markdown-section">
                                 
-                                <h1 id="r-table">R Table</h1>
+                                <h1 id="lesson-submit">Lesson Submit</h1>
 
                                 
                                 </section>
@@ -667,12 +667,12 @@
 
             
                 
-                <a href="r-shell.html" class="navigation navigation-prev " aria-label="Previous page: R Shell">
+                <a href="grid.html" class="navigation navigation-prev " aria-label="Previous page: Grid">
                     <i class="fa fa-angle-left"></i>
                 </a>
                 
                 
-                <a href="slider.html" class="navigation navigation-next " aria-label="Next page: Slider">
+                <a href="match-list-question.html" class="navigation navigation-next " aria-label="Next page: Match List Question">
                     <i class="fa fa-angle-right"></i>
                 </a>
                 
@@ -683,7 +683,7 @@
     <script>
         var gitbook = gitbook || [];
         gitbook.push(function() {
-            gitbook.page.hasChanged({"page":{"title":"R Table","level":"1.4.15","depth":2,"next":{"title":"Slider","level":"1.4.16","depth":2,"path":"components/slider.md","ref":"components/slider.md","articles":[]},"previous":{"title":"R Shell","level":"1.4.14","depth":2,"path":"components/r-shell.md","ref":"components/r-shell.md","articles":[]},"dir":"ltr"},"config":{"plugins":["edit-link"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":3},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"highlight":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/r-table.md","mtime":"2016-11-11T08:28:03.029Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2016-11-11T08:30:51.849Z"},"basePath":"..","book":{"language":""}});
+            gitbook.page.hasChanged({"page":{"title":"Lesson Submit","level":"1.4.8","depth":2,"next":{"title":"Match List Question","level":"1.4.9","depth":2,"path":"components/match-list-question.md","ref":"components/match-list-question.md","articles":[]},"previous":{"title":"Grid","level":"1.4.7","depth":2,"path":"components/grid.md","ref":"components/grid.md","articles":[]},"dir":"ltr"},"config":{"plugins":["edit-link"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":3},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"highlight":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/lesson-submit.md","mtime":"2016-11-11T08:29:42.360Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2016-11-11T08:30:51.849Z"},"basePath":"..","book":{"language":""}});
         });
     </script>
 </div>
